Implement the home page
This makes the interaction between different contest entry pages way easier. Meanwhile, implement also a "<< Go Back" button link which redirects back to the home page.

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -49,3 +49,15 @@ iframe {
 p {
    padding-left: 25px;
 }
+
+a {
+   color: #faebd7;
+}
+
+a:visited {
+   color: #b0c4de;
+}
+
+a:hover {
+   color: #ff0000;
+}
