--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -11,6 +11,7 @@ html, body {
    padding: 0;
    background-color: #36393f;
    color: #ffffff;
+   font-family: Tahoma, Helvetica, sans-serif;
 }
 
 h1 {
@@ -38,6 +39,19 @@ div {
    margin: 15px;
    text-align: justify;
    color: #bdbdbd;
+   background-color: #474a50;
+   border-radius: 5px;
+   padding: 5px;
+   /* Slight hack for tiny screen devices so images/iframes don't leak */
+   overflow: hidden;
+}
+
+div#winner {
+   background-color: #4a443b;
+}
+
+div#disqualified {
+   background-color: #4a3b3b;
 }
 
 iframe {
