Replace my previous alias

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -2,7 +2,7 @@
  *
  * Purpose: File with style sheets
  *
- * Created by: George Bișoc (Fraizeraust)
+ * Created by: George Bișoc (GeoB99)
  *
 */
 
